--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <h2>Ingredients</h2>
         <ul>
-            <li>200g spaghetti</li>
+            <li>200g spagheTIIIIIIII</li>
             <li>100g pancetta</li>
             <li>2 large eggs</li>
             <li>50g pecorino cheese (grated)</li>
