--- a/index.html
+++ b/index.html
@@ -50,13 +50,21 @@
         .instructions ol li {
             margin-bottom: 10px;
         }
+        .recipe-image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
 
     <div class="container">
         <h1>Spaghetti Carbonara</h1>
-        
+        <img src="imagenes/portada.png" alt="Description of Image"  class="recipe-image">
         <h2>Ingredients</h2>
         <ul>
             <li>200g spagheTIIIIIIII</li>
