Articles and stuff

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cooking Recipe - Spaghetti Carbonara, this is an EDITED VERSION</title>
+    <title>Aza Ramirez dev</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,31 +63,30 @@
 <body>
 
     <div class="container">
-        <h1>Spaghetti Carbonara</h1>
+        <h1>Aza Ramirez - Dev page</h1>
         <img src="imagenes/portada.png" alt="Description of Image"  class="recipe-image">
-        <h2>Ingredients</h2>
+        <h2>Description</h2>
         <ul>
-            <li>200g spagheTIIIIIIII</li>
-            <li>100g pancetta</li>
-            <li>2 large eggs</li>
-            <li>50g pecorino cheese (grated)</li>
-            <li>50g parmesan cheese (grated)</li>
-            <li>2 cloves of garlic (peeled)</li>
-            <li>Salt and pepper (to taste)</li>
-            <li>Olive oil</li>
+            <li>Data science Undergraduate student</li>
+            <li>Currently I am interested in the development of new neural network architectures</li>
+            <li>Also eager to learn about innovations in NLP</li>
         </ul>
 
-        <h2>Instructions</h2>
+        <h2>Experience</h2>
         <div class="instructions">
             <ol>
-                <li>Bring a large pot of salted water to a boil. Cook the spaghetti according to the package instructions until al dente.</li>
-                <li>Meanwhile, cut the pancetta into small pieces. Heat a little olive oil in a pan and cook the pancetta until crispy. Add the garlic and cook for another minute, then remove from heat.</li>
-                <li>In a bowl, beat the eggs, then mix in the grated cheeses. Season with a little pepper.</li>
-                <li>When the spaghetti is ready, reserve a cup of the cooking water and drain the rest.</li>
-                <li>Quickly toss the spaghetti with the pancetta, garlic, and the egg-cheese mixture. Add a little cooking water if needed to create a creamy sauce.</li>
-                <li>Serve immediately, with extra cheese and pepper on top.</li>
+                <li><a href="https://azahramirez.github.io/neuronsforR/" target="_blank">R package 'NeuronsforR'</a> : Currently it just adds numbers, but in the near future it will be a simplified version for neural nets applications in R </li>
+                <li>Currently working on Topology applications for NLP </li>
+             
             </ol>
         </div>
+
+        <h2>Articles</h2>
+        <div class="instructions">
+            <ol>
+                <li><a href="articles/first.html" target="_blank">CNN-history</a> : My first post in my blog</li>
+                <li><a href="articles/second.html" target="_blank">Topological Data Analysis</a> : My second post in my blog</li>
+            </ol>
     </div>
 
 </body>
