--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
                 <li><a href="articles/first.html" target="_blank">CNN-history</a> : My first post in my blog</li>
                 <li><a href="articles/second.html" target="_blank">Topological Data Analysis</a> : My second post in my blog</li>
             </ol>
-    </div>
+        </div>
+
+         <h2>Other projects</h2>
+        <div class="instructions">
+            <ol>
+                <li><a href="https://azahramirez.github.io/AzabookReviews/" target="_blank">Aza Book Reviews</a> : List of book reviews of guaranteed great stories</li>
+            </ol>
+        </div>
 
 </body>
 </html>
